src/objects/Credit_Adjustment__c.object
<CustomObject>
    <description>Credit Adjustment stores the non-taxable credits (except Goodwill) of ARMS Billing Account to be transferred to ARMS</description>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ARMS Billing Account where this Credit Adjustment belongs to</description>
        <label>Billing Account</label>
        <referenceTo>Zuora__CustomerAccount__c</referenceTo>
        <relationshipLabel>Credit Adjustments</relationshipLabel>
        <relationshipName>Credit_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The related Refund Case</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Credit Adjustments</relationshipLabel>
        <relationshipName>Credit_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Amount__c</fullName>
        <description>Credit Balance Amount to be transferred to ARMS</description>
        <label>Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Document_Date__c</fullName>
        <description>Date when this Credit Adjustment is generated</description>
        <label>Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>To_ARMS_Time__c</fullName>
        <description>Time when this record is sent to ARMS. Only valid for ARMS Billing Account Credit Notes</description>
        <label>ARMS Interface Time</label>
        <type>DateTime</type>
    </fields>
    <label>Credit Adjustment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Billing_Account__c</columns>
        <columns>Document_Date__c</columns>
        <columns>Case__c</columns>
        <columns>Credit_Amount__c</columns>
        <columns>To_ARMS_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Credit Adjustment Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Adjustments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>